footer-service-picture add
I added the footer with transparent background  *there is a mini style in here with different font

added a picture to component for boston fall as a background for services page

added text for service page

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -1,1 +1,38 @@
 <!-- Contact Page -->
+
+<title> Contact 'Bos in Boston </title>
+
+  </head>
+  <body>
+
+
+
+
+
+    <!--- THIS IS LOGO PIC -->
+    <div id="logo-more">
+        <a href= 'home-content-page.html'>  <img src = "pics/logo.png" 
+          alt ="Logo" id ="logo">  </a>
+      </div>
+      <!--- THIS IS LOGO PIC -->
+
+
+    <!--THIS IS THE CONTENT-->
+
+<div class = "content">
+    <h1> Let's Work Together </h1>
+    <hr>
+
+    <h2>Phone </h2>
+    <a href="tel:8328009996" class="hoover-link">832-800-9996</a>
+
+    <h2>Email </h2>
+    <a href="mailto:ezey.ugc@gmail.com" class="hoover-link">ezey.ugc@gmail.com</a>
+
+    <h2> Schuedule a Call </h2>
+    <a href="https://calendly.com/ezey-ugc/ugc-collaboration-session" class="hoover-link"> Here </a>
+
+    <br/>
+    <h2> 24 HR Response Rate </h2>
+</div>
+  <!--THIS IS THE CONTENT-->
