--- a/pages/services/services-offered.html
+++ b/pages/services/services-offered.html
@@ -1,1 +1,110 @@
 <!-- Services Offered Page (Main Service Page)-->
+
+<html>
+<head>
+
+<title> Ezey's WebPrograming HW 1 </title>
+
+<style> 
+    * 
+    {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+    }
+    h1 
+    {
+        color: #FA8072;
+        font-size: 48px;
+        text-align: center;
+        margin-bottom: 20px;
+    }
+
+    h2 
+    {
+        color: #008080;
+        font-size: 24px;
+        margin: 15px 0;
+        text-align: center;
+    }
+
+    h3 
+    {
+        color: #008080;
+        font-size: 2opx;
+        margin-top: 30px;
+    }
+
+    p 
+    {
+        font-size: 16px;
+        margin: 10px 0;
+        line-height: 1.6;
+        margin: 10px 0;
+        text-align: center;
+    }
+
+    /* Background Picture */
+    body {
+            background-image: url('components/pics/boston-fall.jpg');
+            background-size: cover;
+            background-position: center;
+            font-family: Arial, sans-serif;
+            padding: 20px;
+            color: #fff;
+        }
+
+    .body {
+        max-width: 800px;
+        margin: auto;
+        background: rgba(0, 0, 0, 0.6); /* Transparent black background */
+        padding: 30px;
+        border-radius: 15px;
+    }
+
+
+
+
+
+        .btn {
+            display: inline-block;
+            background-color: #FA8072;
+            color: white;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 5px;
+            text-decoration: none;
+            margin-top: 10px;
+            cursor: pointer;
+        }
+
+        .btn:hover {
+            background-color: #ff6b6b;
+        }
+</style>
+
+
+</head>
+<body>
+    <div class="bod"> 
+        <h1>‘Bos Discovering Boston and Beyond</h1>
+
+        <h2>Looking for adventure, culture, or a relaxing weekend in Boston? 
+            Explore our curated excursions designed specifically for Tufts students—
+            whether you want to hit the slopes, dive into Boston’s rich history, 
+            or unwind with a city escape.
+        </h2>
+
+        <h3>Boston Get Aways</h3>
+        <p>Look here to find different itineraries of our group trips.</p>
+        <p>To book a trip, send us an email with your contact info and preferred date for a tour.</p>
+
+        <h3>How to Boston Get Aways</h3>
+        <p>Get to know clubs like the Eco Arts Club and Tufts Mountain Club.</p>
+
+        <a href="#" class="btn">Book a Trip</a>
+    </div>
+
+  
+</body>
+</html>
