Fixed image directory

--- a/pages/services/services-offered.html
+++ b/pages/services/services-offered.html
@@ -46,7 +46,7 @@
 
     /* Background Picture */
     body {
-            background-image: url('components/pics/boston-fall.jpg');
+            background-image: url('../../components/pics/boston-fall.jpg');
             background-size: cover;
             background-position: center;
             font-family: Arial, sans-serif;
