--- a/pages/FAQ.html
+++ b/pages/FAQ.html
@@ -1,1 +1,56 @@
 <!-- FAQ Page -->
+
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <title>FAQs</title>
+    <style>
+      ul {
+        list-style-type: none;
+      }
+    </style>
+  </head>
+  <body>
+    <!-- Main Section -->
+    <div>
+      <!-- FAQ List -->
+      <ul>
+        <li>Q: What documents do I need?</li>
+        <li>A: We will need valid documents to verify your identity.</li>
+        <br />
+        <li>Q: How far in advance should I book?</li>
+        <li>A: You must book at least 2 weeks in advance.</li>
+        <br />
+        <li>Q: How do I stay safe while traveling?</li>
+        <li>
+          A: Stay aware of your surroundings, avoid displaying valuable items in
+          public, and research local safety conditions before traveling. Use
+          hotel safes for your valuables and keep copies of important documents
+          in case of theft or loss.
+        </li>
+        <br />
+        <li>Q: What should I pack?</li>
+        <li>
+          A: Pack light, versatile clothing, a comfortable pair of shoes,
+          travel-sized toiletries, important documents (e.g., ID), chargers, and
+          any medications. Make sure to check the weather forecast for your
+          destination to pack accordingly.
+        </li>
+        <br />
+        <li>Q: Do I need travel insurance?</li>
+        <li>
+          A: It's highly recommended to purchase travel insurance to cover
+          unforeseen events like trip cancellations, medical emergencies, or
+          lost luggage.
+        </li>
+        <br />
+        <li>Q: What is the best way to budget?</li>
+        <li>
+          A: Many expenses will come with the package, but be sure to set aside
+          extra money for discretionary spending.
+        </li>
+        <br />
+      </ul>
+    </div>
+  </body>
+</html>
