--- a/pages/FAQ.html
+++ b/pages/FAQ.html
@@ -5,52 +5,80 @@
   <head>
     <title>FAQs</title>
     <style>
+      body {
+        margin: 0px;
+        font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+      }
       ul {
         list-style-type: none;
       }
+      .flex-container {
+        display: flex;
+        flex-direction: column;
+        height: 100vh;
+      }
+      .content {
+        padding-top: 60px;
+      }
     </style>
+
+    <!-- Import Navbar -->
+    <script
+      src="https://code.jquery.com/jquery-3.7.1.js"
+      integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4="
+      crossorigin="anonymous"
+    ></script>
+    <script>
+      $(function () {
+        $("#navbar").load("../components/navbar.html");
+      });
+    </script>
   </head>
   <body>
-    <!-- Main Section -->
-    <div>
-      <!-- FAQ List -->
-      <ul>
-        <li>Q: What documents do I need?</li>
-        <li>A: We will need valid documents to verify your identity.</li>
-        <br />
-        <li>Q: How far in advance should I book?</li>
-        <li>A: You must book at least 2 weeks in advance.</li>
-        <br />
-        <li>Q: How do I stay safe while traveling?</li>
-        <li>
-          A: Stay aware of your surroundings, avoid displaying valuable items in
-          public, and research local safety conditions before traveling. Use
-          hotel safes for your valuables and keep copies of important documents
-          in case of theft or loss.
-        </li>
-        <br />
-        <li>Q: What should I pack?</li>
-        <li>
-          A: Pack light, versatile clothing, a comfortable pair of shoes,
-          travel-sized toiletries, important documents (e.g., ID), chargers, and
-          any medications. Make sure to check the weather forecast for your
-          destination to pack accordingly.
-        </li>
-        <br />
-        <li>Q: Do I need travel insurance?</li>
-        <li>
-          A: It's highly recommended to purchase travel insurance to cover
-          unforeseen events like trip cancellations, medical emergencies, or
-          lost luggage.
-        </li>
-        <br />
-        <li>Q: What is the best way to budget?</li>
-        <li>
-          A: Many expenses will come with the package, but be sure to set aside
-          extra money for discretionary spending.
-        </li>
-        <br />
-      </ul>
+    <div class="flex-container">
+      <!-- Import Navbar -->
+      <div id="navbar"></div>
+      <!-- Main Section -->
+      <div class="content">
+        <!-- FAQ List -->
+        <ul>
+          <li>Q: What documents do I need?</li>
+          <li>A: We will need valid documents to verify your identity.</li>
+          <br />
+          <li>Q: How far in advance should I book?</li>
+          <li>A: You must book at least 2 weeks in advance.</li>
+          <br />
+          <li>Q: How do I stay safe while traveling?</li>
+          <li>
+            A: Stay aware of your surroundings, avoid displaying valuable items
+            in public, and research local safety conditions before traveling.
+            Use hotel safes for your valuables and keep copies of important
+            documents in case of theft or loss.
+          </li>
+          <br />
+          <li>Q: What should I pack?</li>
+          <li>
+            A: Pack light, versatile clothing, a comfortable pair of shoes,
+            travel-sized toiletries, important documents (e.g., ID), chargers,
+            and any medications. Make sure to check the weather forecast for
+            your destination to pack accordingly.
+          </li>
+          <br />
+          <li>Q: Do I need travel insurance?</li>
+          <li>
+            A: It's highly recommended to purchase travel insurance to cover
+            unforeseen events like trip cancellations, medical emergencies, or
+            lost luggage.
+          </li>
+          <br />
+          <li>Q: What is the best way to budget?</li>
+          <li>
+            A: Many expenses will come with the package, but be sure to set
+            aside extra money for discretionary spending.
+          </li>
+          <br />
+        </ul>
+      </div>
     </div>
   </body>
 </html>
