Fixed src and assets folder

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -11,7 +11,7 @@
 
     <!--- THIS IS LOGO PIC -->
     <div id="logo-more">
-        <a href= 'home-content-page.html'>  <img src = "pics/logo.png" 
+        <a href= 'home-content-page.html'>  <img src = "../assets/logo.png" 
           alt ="Logo" id ="logo">  </a>
       </div>
       <!--- THIS IS LOGO PIC -->
