--- a/pages/services/services-offered.html
+++ b/pages/services/services-offered.html
@@ -96,7 +96,7 @@
     }
 
     .section1 {
-        background-image: url('../../components/pics/boston-fall.jpg');
+        background-image: url('../../assets/boston-fall.jpg');
         background-size: cover;
         background-position: center;
     }
@@ -113,7 +113,7 @@
 </head>
 <body>
 
-    <a href= 'itinerary.html'>  <img src = "../../components/pics/logo.png" 
+    <a href= 'itinerary.html'>  <img src = "../../assets/logo.png" 
         alt ="Logo" id ="logo">  </a>
 
     <div class="bod section1"> 
