--- a/pages/services/services-offered.html
+++ b/pages/services/services-offered.html
@@ -86,7 +86,7 @@
 
 
     section {
-        height: 100vh;
+        height: 700px;
         display: flex;
         align-items: center;
         justify-content: center;
@@ -102,7 +102,7 @@
     }
 
     .section2 {
-        background: linear-gradient(to right, #ff7e5f, #feb47b);
+        background: linear-gradient(to right,#fff, #2f86a1);
     }
     .section3 {
         background-color: #3498db;
@@ -157,5 +157,20 @@
     </div>
 
   
+
+
+
+
+
+    <!--create a calender will ahve events each friday post clalssed 4-8 -->
+    <div id="calendar">
+        <div class = "head">
+            <span class = "prev">
+            <a href = "/events?date=2024-09-17"></a> == $0"</span>
+            <span class="month"> October </span>
+            <span class="next">  
+                <a href = "/events?date=2024-09-17"></a> == $0" </span>
+        </div>
+    </div>
 </body>
 </html>
