--- a/pages/contact.html
+++ b/pages/contact.html
@@ -1,8 +1,13 @@
 <!-- Contact Page -->
-
-<title> Contact 'Bos in Boston </title>
-
-  </head>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Contact - 'Bos in Boston</title>
+    <link rel="icon" href="../assets/img/favicon.png" type="image/png">
+    <link rel="stylesheet" href="../styles/index.css">
+</head>
   <body>
 
 
@@ -11,7 +16,7 @@
 
     <!--- THIS IS LOGO PIC -->
     <div id="logo-more">
-        <a href= 'home-content-page.html'>  <img src = "../assets/logo.png" 
+        <a href= 'home-content-page.html'>  <img src = "../assets/img/logo.png" 
           alt ="Logo" id ="logo">  </a>
       </div>
       <!--- THIS IS LOGO PIC -->
@@ -36,3 +41,5 @@
     <h2> 24 HR Response Rate </h2>
 </div>
   <!--THIS IS THE CONTENT-->
+  </body>
+</html>
