--- a/pages/services-offered.html
+++ b/pages/services-offered.html
@@ -1,10 +1,14 @@
 <!-- Services Offered Page (Main Service Page)-->
 
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-
-<title> Ezey's WebPrograming HW 1 </title>
-
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Services Offered - 'Bos in Boston</title>
+    <link rel="icon" href="../assets/img/favicon.png" type="image/png">
+    <link rel="stylesheet" href="../styles/index.css">
+</head>
 <style> 
     * 
     {
@@ -14,6 +18,7 @@
     }
     h1 
     {
+        font-family: var(--primary-font);
         color: #FA8072;
         font-size: 48px;
         text-align: center;
@@ -96,7 +101,7 @@
     }
 
     .section1 {
-        background-image: url('../../assets/boston-fall.jpg');
+        background-image: url('../assets/img/boston-fall.jpg');
         background-size: cover;
         background-position: center;
     }
@@ -113,7 +118,7 @@
 </head>
 <body>
 
-    <a href= 'itinerary.html'>  <img src = "../../assets/logo.png" 
+    <a href= 'itinerary.html'>  <img src = "../assets/img/logo.png" 
         alt ="Logo" id ="logo">  </a>
 
     <div class="bod section1"> 
