--- a/pages/FAQ.html
+++ b/pages/FAQ.html
@@ -7,7 +7,7 @@
     <style>
       body {
         margin: 0px;
-        font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+        font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
       }
       ul {
         list-style-type: none;
@@ -19,6 +19,17 @@
       }
       .content {
         padding-top: 60px;
+        text-align: left;
+        max-width: 70%;
+        margin: 0 auto;
+        line-height: 35px;
+      }
+      .content .question {
+        font-size: 25px;
+        color: #ffa42c;
+      }
+      .content .answer {
+        font-size: 18px;
       }
     </style>
 
@@ -42,38 +53,40 @@
       <div class="content">
         <!-- FAQ List -->
         <ul>
-          <li>Q: What documents do I need?</li>
-          <li>A: We will need valid documents to verify your identity.</li>
+          <li class="question">What documents do I need?</li>
+          <li class="answer">
+            We will need valid documents to verify your identity.
+          </li>
           <br />
-          <li>Q: How far in advance should I book?</li>
-          <li>A: You must book at least 2 weeks in advance.</li>
+          <li class="question">How far in advance should I book?</li>
+          <li class="answer">You must book at least 2 weeks in advance.</li>
           <br />
-          <li>Q: How do I stay safe while traveling?</li>
-          <li>
-            A: Stay aware of your surroundings, avoid displaying valuable items
+          <li class="question">How do I stay safe while traveling?</li>
+          <li class="answer">
+            Stay aware of your surroundings, avoid displaying valuable items
             in public, and research local safety conditions before traveling.
             Use hotel safes for your valuables and keep copies of important
             documents in case of theft or loss.
           </li>
           <br />
-          <li>Q: What should I pack?</li>
-          <li>
-            A: Pack light, versatile clothing, a comfortable pair of shoes,
+          <li class="question">What should I pack?</li>
+          <li class="answer">
+            Pack light, versatile clothing, a comfortable pair of shoes,
             travel-sized toiletries, important documents (e.g., ID), chargers,
             and any medications. Make sure to check the weather forecast for
             your destination to pack accordingly.
           </li>
           <br />
-          <li>Q: Do I need travel insurance?</li>
-          <li>
-            A: It's highly recommended to purchase travel insurance to cover
+          <li class="question">Do I need travel insurance?</li>
+          <li class="answer">
+            It's highly recommended to purchase travel insurance to cover
             unforeseen events like trip cancellations, medical emergencies, or
             lost luggage.
           </li>
           <br />
-          <li>Q: What is the best way to budget?</li>
-          <li>
-            A: Many expenses will come with the package, but be sure to set
+          <li class="question">What is the best way to budget?</li>
+          <li class="answer">
+            Many expenses will come with the package, but be sure to set
             aside extra money for discretionary spending.
           </li>
           <br />
