--- a/pages/about.html
+++ b/pages/about.html
@@ -92,8 +92,20 @@
 
     <!-- Text Blurb 1 -->
      <div class="text-blurb">
-        <h2>About Bos in Boston</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed bibendum, nunc vel fermentum pulvinar, neque sapien tempor risus, ut condimentum arcu ligula in nunc. Nulla facilisi. Donec sagittis, dui vel vestibulum fermentum, nisi mauris condimentum lectus, in semper mi eros id lectus. Sed vel odio non lectus luctus consectetur. Donec vel diam vel felis fermentum lobortis.</p>
+        <h2>About Us</h2>
+        <p>
+            'Bos in Boston is a travel company created by Tufts students, for 
+            Tufts students, offering tailored tours of Boston's most iconic and
+            hidden gems. Our mission is to make exploring the city accessible, 
+            fun, and informative, all while fitting seamlessly into your busy 
+            student life. From historical landmarks to the trendiest spots only
+            locals know, we curate experiences that celebrate the best of 
+            Boston through a Tufts lens. Whether you're a new Jumbo or a 
+            long-time student looking to deepen your connection to the city, 
+            'Bos in Boston is here to guide you every step of the way. Explore
+            Boston with us and discover a side of the city you'll fall in love
+            with!
+        </p>
      </div>
     <!-- Columns -->
     <!-- About -->
