--- a/pages/about.html
+++ b/pages/about.html
@@ -13,6 +13,7 @@
         /* Base font - 16px = 1rem */
         html {
             font-size: 16px;
+            background-color: var(--off-white);
         }
         * {
             margin: 0;
@@ -42,7 +43,7 @@
             border-radius: 15px;
         }
         .landing-catchphrase-2 {
-            background-color: #008080ca;
+            background-color: #40e0d0ca;
             color: var(--coral-peach);
             justify-content: center;
             text-align: center;
@@ -51,12 +52,49 @@
             margin-top: 10px;
             border-radius: 15px;
         }
+        .tbh, .tbp {
+            text-align: center;
+            justify-content: center;
+            align-items: center;
+            padding-left: 200px;
+            padding-right: 200px;
+        }
+        .tbh {
+            color: var(--turquoise);
+            padding-top: 50px;
+            padding-bottom: 25px;
+        }
+        .tbp {
+            color: var(--coral-peach);
+            padding-bottom: 50px;
+            padding-top: 25px;
+            line-height: 1.6;
+        }
+        .why-section {
+            text-align: center;
+            justify-content: center;
+            align-items: center;
+            padding-left: 125px;
+            padding-right: 125px;
+        }
+        .image1, .image2, .image3 {
+            justify-content: center;
+            align-items: center;
+            border: 4px solid var(--turquoise);
+            border-radius: 50%;
+            width: 150px;
+            height: 150px;
+        }
         
         /* Mobile Version */
         @media (max-width: 768px) {
             .landing-catchphrase-1, .landing-catchphrase-2 {
                 width: 80%; 
                 padding: 8px 16px; 
+            }
+            .tbh, .tbp {
+                padding-left: 50px;
+                padding-right: 50px;
             }
         }
     </style>
@@ -91,23 +129,38 @@
     </div>
 
     <!-- Text Blurb 1 -->
-     <div class="text-blurb">
-        <h2>About Us</h2>
-        <p>
+     <div>
+        <h2 class="tbh">About Us</h2>
+        <p class="tbp">
             'Bos in Boston is a travel company created by Tufts students, for 
             Tufts students, offering tailored tours of Boston's most iconic and
-            hidden gems. Our mission is to make exploring the city accessible, 
+            hidden gems. <br> <br>
+            Our mission is to make exploring the city accessible, 
             fun, and informative, all while fitting seamlessly into your busy 
-            student life. From historical landmarks to the trendiest spots only
-            locals know, we curate experiences that celebrate the best of 
-            Boston through a Tufts lens. Whether you're a new Jumbo or a 
-            long-time student looking to deepen your connection to the city, 
-            'Bos in Boston is here to guide you every step of the way. Explore
-            Boston with us and discover a side of the city you'll fall in love
-            with!
+            student life.
         </p>
      </div>
+
     <!-- Columns -->
+    <div class="why-section">
+        <h2 class="why-h">Why Choose Us?</h2>
+        <div class="section">
+            <img src="../assets/img/student-walk.jpg" alt="why-image-1" class="image1">
+            <h3>Tailored for Tufts</h3>
+            <p>Text here</p>
+        </div>
+        <div class="section">
+            <img src="../assets/img/boston-street.jpg" alt="why-image-2" class="image2">
+            <h3>Local Knowledge</h3>
+            <p>Text here</p>
+        </div>
+        <div class="section">
+            <img src="../assets/img/boston-fun.jpg" alt="why-image-3" class="image3">
+            <h3>Flexible & Fun!</h3>
+            <p>Text here</p>
+        </div>
+    </div>
+
     <!-- About -->
 </body>
 
