--- a/pages/blog-client-testimonials.html
+++ b/pages/blog-client-testimonials.html
@@ -11,34 +11,36 @@
 <link rel="stylesheet" href="../styles/blog-travel-resources.css">
 </head>
        <body>
-
+        <div class="navbar">
+          <!-- Nav Menu -->
+          <ul id="nav">
+            <li>
+              <a href="../index.html"
+                ><img
+                  src="../assets/img/logo.png"
+                  alt="Logo"
+              /></a>
+            </li>
+            <li>
+              <a href="">Services Offered</a>
+              <div class="services-dropdown">
+                <a href="../pages/services-offered.html">Services</a>
+                <a href="../pages/destination-guides.html">Destination Guides</a>
+              </div>
+            </li>
+            <li><a href="">Travel Resources</a></li>
+            <li><a href="">About</a></li>
+          </ul>
+        </div>
               <header class = "main_header">
-                     <div class="navbar">
-                            <!-- Nav Menu -->
-                            <ul id="nav">
-                              <li>
-                                <a href="../index.html"
-                                  ><img
-                                    src="../assets/img/logo.png"
-                                    alt="Logo"
-                                /></a>
-                              </li>
-                              <li>
-                                <a href="">Services Offered</a>
-                                <div class="services-dropdown">
-                                  <a href="../pages/services-offered.html">Services</a>
-                                  <a href="../pages/destination-guides.html">Destination Guides</a>
-                                </div>
-                              </li>
-                              <li><a href="">Travel Resources</a></li>
-                              <li><a href="">About</a></li>
-                            </ul>
-                          </div>
 
                      <h1 class = "text"> Explore Boston's greatest artistic treasure! <h1>
                      <img class = "image1">
-
               </header>
+
+              <footer>
+                <p>&copy; 'Bos in Boston. All rights reserved.</p>
+              </footer>
 
        
 
