--- a/pages/FAQ.html
+++ b/pages/FAQ.html
@@ -29,10 +29,11 @@
       }
       .content .question {
         font-family: var(--primary-font);
-        font-size: 25px;
+        font-size: 30px;
         color: var(--coral-peach);
       }
       .content .answer {
+        font-family: var(--secondary-font);
         font-size: 18px;
       }
     </style>
