--- a/pages/destination-guides.html
+++ b/pages/destination-guides.html
@@ -1,1 +1,33 @@
 <!-- Destination Guides Page -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Desitination Guides - 'Bos in Boston</title>
+    <link rel="icon" href="../assets/img/favicon.png" type="image/png">
+    <link rel="stylesheet" href="../styles/index.css">
+</head>
+<!-- AIzaSyB-k8pwA9OxPq_hJL4iIH_qbP1EZnHE_Fk -->
+
+<!-- Imported Navigation Bar -->
+<script
+    src="https://code.jquery.com/jquery-3.7.1.js"
+    integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4="
+    crossorigin="anonymous">
+</script>
+<script>
+    $(function () {
+        $("#navbar").load("../components/navbar.html");
+    });
+</script>
+
+<!-- Contents -->
+<body>
+    <!-- Navigation Bar -->
+    <div id="navbar"></div>
+    <div class="content">
+
+    </div>
+</body>
+</html>
