--- a/pages/blog-travel-resources.html
+++ b/pages/blog-travel-resources.html
@@ -1,1 +1,15 @@
 <!-- Blog/Travel Resources Page -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Blog/Travel Resources - 'Bos in Boston</title>
+    <link rel="icon" href="../assets/img/favicon.png" type="image/png">
+    <link rel="stylesheet" href="../styles/index.css">
+</head>
+
+<body> 
+    
+</body>
+</html>
