--- a/pages/client-testimonials.html
+++ b/pages/client-testimonials.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About - 'Bos in Boston</title>
+    <title>Client Testimonials - 'Bos in Boston</title>
     <link rel="icon" href="../assets/img/favicon.png" type="image/png">
     <link rel="stylesheet" href="../styles/index.css">
 </head>
