--- a/pages/index.html
+++ b/pages/index.html
@@ -3,6 +3,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="../assets/img/favicon.png" type="image/png" />
+    <link rel="stylesheet" href="../styles/index.css" />
     <title>Home</title>
     <style>
       body {
