--- a/pages/contact.html
+++ b/pages/contact.html
@@ -8,37 +8,70 @@
     <link rel="icon" href="../assets/img/favicon.png" type="image/png">
     <link rel="stylesheet" href="../styles/index.css">
 </head>
+
+
+
+
+<style> 
+
+body{ 
+  background-color: #00808046;
+}
+h1 {
+  font-size: 70px;
+  font-weight: bold;
+  color: #FA8072;
+  text-align: center;
+  margin-bottom: 20px;
+  border-radius: 15px;
+}
+h2 {
+
+  font-size: 60px;
+  font-weight: bold;
+  color: #008080;
+  text-align: center;
+  margin-bottom: 20px;
+  border-radius: 15px;
+}
+
+.content {
+    padding: 50px;
+    background-color: #fa8072d4(250, 250, 250, 0.8);
+    text-align: center;
+    color: #008080;
+    }
+
+      
+    .hoover-link {
+      text-decoration:none;
+      padding: 5px 10px;
+      transition: border 0.3s, solor 0.3s;
+      color:#008080;
+      font-size: 30px;
+    }
+    .hoover-link:hover {
+      border: 2px solid #fa8072d4;
+      color: #fa8072d4;
+      border-radius: 4px;
+      display: inline-block;
+    }
+
+</style> 
   <body>
 
 
 
 
-
-    <!--- THIS IS LOGO PIC -->
-    <div id="logo-more">
-        <a href= 'home-content-page.html'>  <img src = "../assets/img/logo.png" 
-          alt ="Logo" id ="logo">  </a>
-      </div>
-      <!--- THIS IS LOGO PIC -->
-
-
-    <!--THIS IS THE CONTENT-->
-
 <div class = "content">
-    <h1> Let's Work Together </h1>
-    <hr>
-
+    <h1> have questions? reach out! </h1>
+  
     <h2>Phone </h2>
-    <a href="tel:8328009996" class="hoover-link">832-800-9996</a>
+    <a href="tel:(617) 627-5000" class="hoover-link">(617) 627-5000</a>
 
     <h2>Email </h2>
-    <a href="mailto:ezey.ugc@gmail.com" class="hoover-link">ezey.ugc@gmail.com</a>
+    <a href="mailto:bos.explore@tufts.edu" class="hoover-link">bos.explore@tufts.edu</a>
 
-    <h2> Schuedule a Call </h2>
-    <a href="https://calendly.com/ezey-ugc/ugc-collaboration-session" class="hoover-link"> Here </a>
-
-    <br/>
-    <h2> 24 HR Response Rate </h2>
 </div>
   <!--THIS IS THE CONTENT-->
   </body>
