--- a/pages/services-offered.html
+++ b/pages/services-offered.html
@@ -37,6 +37,8 @@
 
       .text-box {
         background-color: #40e0d0ca;
+        justify-content: center;
+        align-items: center;
         padding: 20px 40px;
         border-radius: 10px;
         text-align: center;
@@ -48,7 +50,7 @@
         font-weight: bold;
         color: #fa8072;
         text-align: center;
-        margin-bottom: 20px;
+        margin-bottom: 10px;
         border-radius: 15px;
       }
 
@@ -66,6 +68,7 @@
         margin: 10px 0;
         text-align: center;
         color: #008080;
+        padding: 30px;
       }
 
       .btn {
