--- a/pages/about.html
+++ b/pages/about.html
@@ -36,8 +36,8 @@
             flex-direction: column;
         }
         .landing-catchphrase-1 {
-            background-color: #fa8072ca;
             color: var(--turquoise);
+            font-size: var(--fs-header);
             justify-content: center;
             text-align: center;
             align-items: center;
@@ -46,7 +46,6 @@
             border-radius: 15px;
         }
         .landing-catchphrase-2 {
-            background-color: #40e0d0ca;
             color: var(--coral-peach);
             justify-content: center;
             text-align: center;
