--- a/pages/index.html
+++ b/pages/index.html
@@ -27,7 +27,7 @@
         margin: 100px;
       }
       .landing-img {
-        background-image: url("../assets/img/about-bg.jpg");
+        background-image: url("../assets/img/home-bg.webp");
         background-position: center;
         background-size: cover;
         height: 50vh;
@@ -39,7 +39,6 @@
         flex-direction: column;
       }
       .landing-catchphrase-1 {
-        background-color: #fa8072ca;
         color: var(--turquoise);
         justify-content: center;
         text-align: center;
