Worked on my pages some more

--- a/pages/blog-client-testimonials.html
+++ b/pages/blog-client-testimonials.html
@@ -123,7 +123,28 @@
 
                 <h1 class = "subheading"> Hear what recent visitors have to say! </h1>
 
-                    
+                <div class = "clients">
+                        <div class = "bubble"> 
+                                        Angelique W says: <br>
+                                        "I've never been to the MFA before. I booked on a whim and Bo's in Boston
+                                        took care of the rest, they even helped me get there!"
+                        </div>
+                        <div class = "bubble">
+                                        Timmothy T says: <br>
+                                        "The MFA tour was so much fun! We saw lots of art and our tour guides knew so much,
+                                        I'm definitely booking with Bo's in Boston again!
+                        </div>
+                        <div class = "bubble"> 
+                                        Sarah G says: <br>
+                                        "I loved every second of it! I am originally from New York City, the the tours
+                                        with Bo's in Boston were the highlight of my trip!"
+                        </div>
+
+                </div>    
+
+                <h2 class = "subheading"> Up Next: </h2>
+                <a class = "link" href ="../pages/travel-resources.html"> <h2 id = "subheading">Check out our travel resources!</h2></a>
+
                 <footer>
                         <p>&copy; 'Bos in Boston. All rights reserved.</p>
                 </footer>
