--- a/pages/about.html
+++ b/pages/about.html
@@ -37,7 +37,6 @@
         }
         .landing-catchphrase-1 {
             color: var(--turquoise);
-            font-size: var(--fs-header);
             justify-content: center;
             text-align: center;
             align-items: center;
@@ -54,6 +53,11 @@
             margin-top: 10px;
             border-radius: 15px;
         }
+        .landing-catchphrase-1 h1,
+        .landing-catchphrase-2 h1 {
+            font-size: 10rem;
+        }
+
         .tbh, .tbp {
             text-align: center;
             justify-content: center;
