--- a/pages/index.html
+++ b/pages/index.html
@@ -21,7 +21,7 @@
         height: 100vh;
       }
       .content {
-        padding-top: 60px;
+        padding-top: 90px;
       }
       .section {
         margin: 100px;
@@ -30,7 +30,7 @@
         background-image: url("../assets/img/home-bg.webp");
         background-position: center;
         background-size: cover;
-        height: 50vh;
+        height: 100vh;
         width: 100%;
         justify-content: center;
         display: flex;
@@ -46,6 +46,15 @@
         padding: 4px 14px;
         margin-bottom: 10px;
         border-radius: 15px;
+        animation: zoomOut 5s ease-in-out forwards;
+      }
+      @keyframes zoomOut {
+        from {
+          transform: scale(0.9);
+        }
+        to {
+          transform: scale(1);
+        }
       }
       .heading,
       .text {
@@ -94,7 +103,7 @@
       <div class="content">
         <div class="landing-img">
           <div class="landing-catchphrase-1">
-            <h1>'Bos in Boston</h1>
+            <h1>Curated excursions </br> designed for Tufts students!</h1>
           </div>
         </div>
 
