--- a/pages/services-offered.html
+++ b/pages/services-offered.html
@@ -57,15 +57,11 @@
       h2 {
         color: #008080;
         margin: 20px 0;
-        font-size: 50px;
         text-align: center;
       }
 
-      p {
-        font-size: 15px;
-        margin: 10px 0;
-        line-height: 1.6;
-        margin: 10px 0;
+     .paragraph p {
+        font-size: 40px;
         text-align: center;
         color: #008080;
         padding: 30px;
@@ -120,6 +116,47 @@
       .form-submit:hover {
         background-color: #008080;
       }
+
+      /* Mobile Version */
+      @media (max-width: 768px) {
+        body {
+          padding: 10px;
+        }
+        .title-page {
+          padding-top: 40px;
+        }
+
+        /* .text-box {
+          padding: 20px 20px; 
+        } */
+        h1 {
+          font-size: 28px;
+        }
+        h2 {
+          font-size: 36px;
+        }
+        p {
+          font-size: 14px;
+          padding: 15px;
+        }
+        .btn {
+          padding: 10px 20px;
+          font-size: 16px;
+        }
+        .form {
+          padding: 15px;
+        }
+        .form-options-style {
+          padding: 8px;
+        }
+        .form-submit {
+          padding: 12px;
+        }
+        label {
+          font-size: 14px; /* Smaller font size for labels */
+          display: block; /* Ensure labels are block-level for spacing */
+        }
+      }
     </style>
 
     <!-- Import Navbar -->
@@ -139,92 +176,100 @@
     <!-- body and nav -->
     <div class="flex-container">
       <div id="navbar"></div>
-
-      <div class="title-page">
-        <div class="text-box">
-          <h1>Boston and Beyond</h1>
-          <p><strong>Adventures, Getaways, and Fun</strong></p>
+      <div class="paragraph">
+        <div class="title-page">
+          <div class="text-box">
+            <h1>Boston and Beyond</h1>
+            <p><strong>Adventures, Getaways, and Fun</strong></p>
+          </div>
         </div>
-      </div>
 
-      <div>
-        <h2>Boston Getaways</h2>
-        <p>
-          <strong>Join us for the perfect escape from campus!</strong
-          ><br />Explore Boston's city life whether you are feeling a fun
-          adventure or a relaxing picnic.
-        </p>
-        <p>
-          Check out our curated itineraries
-          <a href="destination-guides.html" class="btn">here</a> and plan your
-          next adventure with us today!
-        </p>
-        <p><strong>Trips every Saturday 11 AM - 1 PM EST for free!</strong></p>
-        <p>
-          Fill this form by Wednesday Noon EST to be considered for that coming
-          Saturday's excursion.
-        </p>
-      </div>
+        <div>
+          <h2>Boston Getaways</h2>
+          <p>
+            <strong>Join us for the perfect escape from campus!</strong
+            ><br />Explore Boston's city life whether you are feeling a fun
+            adventure or a relaxing picnic.
+          </p>
+          <p>
+            Check out our curated itineraries
+            <a href="destination-guides.html" class="btn">here</a> and plan your
+            next adventure with us today!
+          </p>
+          <p>
+            <strong>Trips every Saturday 11 AM - 1 PM EST for free!</strong>
+          </p>
+          <p>
+            Fill this form by Wednesday Noon EST to be considered for that
+            coming Saturday's excursion.
+          </p>
+        </div>
 
-      <div>
-        <form class="form">
-          <label> Name:</label>
-          <input
-            type="text"
-            name="name"
-            id="name"
-            placeholder="First Last"
-            required
-          />
-          <label>Email:</label>
-          <input
-            type="email"
-            name="email"
-            id="email1"
-            placeholder="yourname@example.com"
-            required
-          />
-          <br /> <br />
-          <label>Your Itinerary:</label>
-          <select
-            class="form-options-style"
-            id="itinerary"
-            name="itinerary"
-            required
-          >
-            <option value="default">Select</option>
-            <option value="mfa-museum">Museum of Fine Arts</option>
-            <option value="north-end">North End</option>
-            <option value="seaport">Seaport</option>
-            <option value="cambridge">Cambridge</option>
-            <option value="davis-square">Davis Square</option>
-            <option value="picnic-common">Boston Commons</option>
-            <option value="fenway">Fenway</option>
-          </select>
+        <div>
+          <form class="form">
+            <label> Name:</label>
+            <input
+              type="text"
+              name="name"
+              id="name"
+              placeholder="First Last"
+              required
+            />
+            <label>Email:</label>
+            <input
+              type="email"
+              name="email"
+              id="email1"
+              placeholder="yourname@example.com"
+              required
+            />
+            <br />
+            <br />
+            <label>Your Itinerary:</label>
+            <select
+              class="form-options-style"
+              id="itinerary"
+              name="itinerary"
+              required
+            >
+              <option value="default">Select</option>
+              <option value="mfa-museum">Museum of Fine Arts</option>
+              <option value="north-end">North End</option>
+              <option value="seaport">Seaport</option>
+              <option value="cambridge">Cambridge</option>
+              <option value="davis-square">Davis Square</option>
+              <option value="picnic-common">Boston Commons</option>
+              <option value="fenway">Fenway</option>
+            </select>
 
-          <label>Have you gone on a trip this semester?</label>
-          <br /><input type="radio" name="which" value="yes" required />
-          <label>Yes, 2 or more</label>
-          <br /> <input type="radio" name="which" value="yes" />
-          <label>Yes, only 1</label>
-          <br /> <input type="radio" name="which" value="no" /> <label>No</label>
+            <label>Have you gone on a trip this semester?</label>
+            <br /><input type="radio" name="which" value="yes" required />
+            <label>Yes, 2 or more</label>
+            <br />
+            <input type="radio" name="which" value="yes" />
+            <label>Yes, only 1</label>
+            <br />
+            <input type="radio" name="which" value="no" /> <label>No</label>
 
-          <input class="form-submit" type="submit" value="Book Your Trip" />
-        </form>
-      </div>
+            <input class="form-submit" type="submit" value="Book Your Trip" />
+          </form>
+        </div>
 
-      <div style="padding-top: 180px">
-        <h2>What are the steps?</h2>
-        <p>
-          <strong >We take care of all the planning to make the perfect Boston day
-            trip</strong>
-        </p>
-        <p>
-          1. Find the adventure you want<br />2. Fill out the above contact
-          form<br />3. Wait to hear back, check your email<br />4. Explore
-          Boston with fellow 'bos
-        </p>
-        <p><strong>Excited to see you soon!</strong></p>
+        <div style="padding-top: 180px">
+          <h2>What are the steps?</h2>
+          <p>
+            <strong
+              >We take care of all the planning to make the perfect Boston day
+              trip</strong
+            >
+          </p>
+          <p>
+            1. Find the adventure you want<br />2. Fill out the above contact
+            form<br />3. Wait to hear back, check your email<br />4. Explore
+            Boston with fellow 'bos
+          </p>
+          <p><strong>Excited to see you soon!</strong></p>
+        </div>
       </div>
     </div>
   </body>
