--- a/pages/index.html
+++ b/pages/index.html
@@ -23,9 +23,6 @@
       .content {
         padding-top: 60px;
       }
-      .section {
-        margin: 100px;
-      }
       .landing-img {
         background-image: url("../assets/img/about-bg.jpg");
         background-position: center;
@@ -44,24 +41,26 @@
         justify-content: center;
         text-align: center;
         align-items: center;
-        padding: 4px 14px;
         margin-bottom: 10px;
         border-radius: 15px;
       }
-      .heading,
-      .text {
+      .section {
+        background-color: #ffcac4ca;
+        color: var(--turquoise);
+        padding: 5px 15px;
         text-align: center;
-        justify-content: center;
-        align-items: center;
-        margin: 20px;
+        margin-bottom: 20px;
+        border-radius: 15px;
+        margin: 100px;
       }
       .heading {
-        font-size: 70px;
+        font-size: 50px;
         font-weight: 50;
+        font-family: var(--primary-font);
         color: var(--turquoise);
       }
       .text {
-        font-size: 35px;
+        font-size: 20px;
         color: var(--coral-peach);
         line-height: 1.8;
       }
