--- a/pages/services-offered.html
+++ b/pages/services-offered.html
@@ -32,11 +32,11 @@
         text-align: center;
         align-items: center;
         flex-direction: column;
-        padding-top: 81.31px;
+        padding: 81.31px;
       }
 
       .text-box {
-        background-color: #40e0d0ca;
+        /* background-color: #40e0d0ca; */
         justify-content: center;
         align-items: center;
         padding: 20px 40px;
@@ -124,11 +124,12 @@
         }
         .title-page {
           padding-top: 40px;
+          height: 60vh;
         }
 
-        /* .text-box {
-          padding: 20px 20px; 
-        } */
+        .text-box {
+          padding: 5px 5px; 
+        }
         h1 {
           font-size: 28px;
         }
@@ -149,6 +150,10 @@
         .form-options-style {
           padding: 8px;
         }
+        .form-options-style {
+          padding: 10px;
+        }
+
         .form-submit {
           padding: 12px;
         }
@@ -156,6 +161,37 @@
           font-size: 14px; /* Smaller font size for labels */
           display: block; /* Ensure labels are block-level for spacing */
         }
+        input[type="text"],
+        input[type="email"] {
+          width: 100%;
+          padding: 10px;
+          margin-bottom: 10px;
+          border-radius: 5px;
+          border: 1px solid #ccc;
+        }
+      }
+
+      .text-box {
+        /* background-color: #40e0d0ca; */
+        justify-content: center;
+        align-items: center;
+        /* padding: 20px 40px; */
+        border-radius: 10px;
+        text-align: center;
+        margin-top: 10px;
+      }
+      .title-page {
+        background-image: url("../assets/img/boston-fall.jpg");
+        background-position: center;
+        background-size: cover;
+        height: 100vh;
+        width: 100%;
+        justify-content: center;
+        display: flex;
+        text-align: center;
+        align-items: center;
+        flex-direction: column;
+        padding: 81.31px;
       }
     </style>
 
