--- a/pages/contact.html
+++ b/pages/contact.html
@@ -31,11 +31,27 @@ h2 {
   border-radius: 15px;
 }
 
+body {
+  background-color: #bcffffbd;
+  background-image: url("../assets/img/boston-fall.jpg");
+        background-position: center;
+        background-size: cover;
+        height: 100vh;
+        width: 100%;
+        justify-content: center;
+        display: flex;
+        text-align: center;
+        align-items: center;
+        flex-direction: column;
+        padding: 81.31px;
+}
 .content {
     padding: 50px;
     background-color: #fa8072d4(250, 250, 250, 0.8);
     text-align: center;
     color: #008080;
+    /* background-color: #f6e5e35c; */
+    border-radius: 15px;
     }
 
       
@@ -43,14 +59,25 @@ h2 {
       text-decoration:none;
       padding: 5px 10px;
       transition: border 0.3s, solor 0.3s;
+      color: #fa8072d4;
+      font-weight: bold;
+      /* background-color: #f6e5e35c; */
+      font-family: var(--secondary-font);
+      font-size: var(--fs-small);
+      text-shadow: 
+          1px 1px 0 #000000, 
+          -1px -1px 0 #000000, 
+          1px -1px 0 #000000,
+          -1px 1px 0 #000000; 
+
     }
     .hoover-link:hover {
-      border: 2px solid #97c6f8;
-      color: #97c6f8;
+      border: 2px solid #008080;
+      color: #008080;
       border-radius: 4px;
-      display: inline-block;
     }
-
+   
+   
 </style> 
   <body>
 
@@ -67,6 +94,7 @@ h2 {
     <h2>Email </h2>
     <a href="mailto:bos.explore@tufts.edu" class="hoover-link">bos.explore@tufts.edu</a>
 
+    <h2 style = "color:#FA8072 "> ROLL 'BOS</h2>
 </div>
   <!--THIS IS THE CONTENT-->
   </body>
