--- a/pages/about.html
+++ b/pages/about.html
@@ -147,6 +147,7 @@
 <script>
     $(function () {
         $("#navbar").load("../components/navbar.html");
+        $("#footer").load("../components/footer.html");
     });
 </script>
 
@@ -207,7 +208,5 @@
     </body>
     
     <!-- Footer -->
-    <footer>
-    
-    </footer>
+    <div id="footer"></div>
 </html>
