--- a/pages/index.html
+++ b/pages/index.html
@@ -92,6 +92,7 @@
     <script>
       $(function () {
         $("#navbar").load("../components/navbar.html");
+        $("#footer").load("../components/footer.html");
       });
     </script>
   </head>
@@ -154,4 +155,6 @@
       </div>
     </div>
   </body>
+  <!-- Import Footer -->
+  <div id="footer"></div>
 </html>
