--- a/pages/index.html
+++ b/pages/index.html
@@ -23,6 +23,9 @@
       .content {
         padding-top: 90px;
       }
+      .section {
+        margin: 100px;
+      }
       .landing-img {
         background-image: url("../assets/img/home-bg.webp");
         background-position: center;
@@ -40,6 +43,7 @@
         justify-content: center;
         text-align: center;
         align-items: center;
+        padding: 4px 14px;
         margin-bottom: 10px;
         border-radius: 15px;
         animation: zoomOut 5s ease-in-out forwards;
@@ -52,23 +56,21 @@
           transform: scale(1);
         }
       }
-      .section {
-        background-color: #ffcac4ca;
-        color: var(--turquoise);
-        padding: 5px 15px;
+      .heading,
+      .text {
         text-align: center;
-        margin-bottom: 20px;
-        border-radius: 15px;
-        margin: 100px;
+        justify-content: center;
+        align-items: center;
+        margin: 20px;
       }
       .heading {
-        font-size: 50px;
+        font-size: 70px;
         font-weight: 50;
-        font-family: var(--primary-font);
         color: var(--turquoise);
       }
       .text {
-        font-size: 20px;
+        font-size: 35px;
+        font-weight: 30;
         color: var(--coral-peach);
         line-height: 1.8;
       }
@@ -102,7 +104,10 @@
       <div class="content">
         <div class="landing-img">
           <div class="landing-catchphrase-1">
-            <h1>Curated excursions </br> designed for Tufts students!</h1>
+            <h1>
+              Curated excursions <br />
+              designed for Tufts students!
+            </h1>
           </div>
         </div>
 
