--- a/pages/blog-client-testimonials.html
+++ b/pages/blog-client-testimonials.html
@@ -9,6 +9,7 @@
 <title>Blog Page - 'Bos in Boston</title>
 <link rel="icon" href="../assets/img/favicon.png" type="image/png">
 <link rel="stylesheet" href="../styles/blog-travel-resources.css">
+
 </head>
 
 <script>
@@ -31,30 +32,51 @@
                 }
                 document.getElementById('image').src = images[currImg];
         }
+
+        function toggleMenu() {
+                  const navContainer = document.querySelector('.nav-container');
+                  navContainer.classList.toggle('active');
+                }
 </script>
 
        <body>
-                <div class="navbar">
-                  <!-- Nav Menu -->
+
+        <div class="navbar">
+                <a href="../pages/index.html">
+                  <h1 class="logo">'Bos in Boston</h1>
+                </a>
+                <div class="hamburger" onclick="toggleMenu()">
+                  <div></div>
+                  <div></div>
+                  <div></div>
+                </div>
+                <div class="nav-container">
                   <ul id="nav">
                     <li>
-                      <a href="../index.html"
-                        ><img
-                          src="../assets/img/logo.png"
-                          alt="Logo"
-                      /></a>
-                    </li>
-                    <li>
-                      <a href="">Services Offered</a>
-                      <div class="services-dropdown">
+                      Offerings
+                      <div class="dropdown">
                         <a href="../pages/services-offered.html">Services</a>
                         <a href="../pages/destination-guides.html">Destination Guides</a>
                       </div>
                     </li>
-                    <li><a href="">Travel Resources</a></li>
-                    <li><a href="">About</a></li>
+                    <li>
+                      Resources
+                      <div class="dropdown">
+                        <a href="../pages/FAQ.html">FAQ</a>
+                        <a href="../pages/blog-client-testimonials.html">Testimonials</a>
+                        <a href="../pages/travel-resources.html">Travel Guide</a>
+                      </div>
+                    </li>
+                    <li>
+                      Discover
+                      <div class="dropdown">
+                        <a href="../pages/about.html">About Us</a>
+                        <a href="../pages/contact.html">Contact Us</a>
+                      </div>
+                    </li>
                   </ul>
                 </div>
+              </div>
 
                 <header class = "main_header">
 
@@ -143,12 +165,12 @@
                 </div>    
 
                 <h2 class = "subheading"> Up Next: </h2>
-                <a class = "link" href ="../pages/travel-resources.html"> <h2 id = "subheading">Check out our travel resources!</h2></a>
+                <a class = "link" href ="../pages/travel-resources.html"> <h2 id = "subheading"> Find out how to navigate around boston using our travel resources!</h2></a>
 
                 <footer>
                         <p>&copy; 'Bos in Boston. All rights reserved.</p>
-                </footer>
-
+                        <p> Get in Touch: <a href="/pages/contact.html" class="hoover-link"> Contact Us</a></p>
+                </footer> 
         </body> 
 
 </html>
