basic look of my website fixed

--- a/pages/blog-client-testimonials.html
+++ b/pages/blog-client-testimonials.html
@@ -86,9 +86,9 @@
                               Here’s why a visit to this incredible institution should be on your must-do list!
                       </h2>  
                       <div class = "images">
-                            <button class = "prev" onclick = changeImg(-1)> < </button>
+                            <button class = "prev" id = "button" onclick = changeImg(-1)> < </button>
                             <img id = "image" src = "../assets/img/Museum-of-Fine-Arts.jpg">
-                            <button class = "next" onclick = changeImg(1)> > </button>
+                            <button class = "next" id = "button" onclick = changeImg(1)> > </button>
                       </div>
                 </header>
 
@@ -168,8 +168,8 @@
                 <a class = "link" href ="../pages/travel-resources.html"> <h2 id = "subheading"> Find out how to navigate around boston using our travel resources!</h2></a>
 
                 <footer>
-                        <p>&copy; 'Bos in Boston. All rights reserved.</p>
-                        <p> Get in Touch: <a href="/pages/contact.html" class="hoover-link"> Contact Us</a></p>
+                                <p>&copy; 'Bos in Boston. All rights reserved.</p>
+                                <button><a href="/pages/contact.html" class="hoover-link"> Contact Us</a></button>
                 </footer> 
         </body> 
 
