--- a/pages/travel-resources.html
+++ b/pages/travel-resources.html
@@ -124,8 +124,9 @@
                 </h2>  
                     
                 <footer>
-                        <p>&copy; 'Bos in Boston. All rights reserved.</p>
-                </footer>
+                    <p>&copy; 'Bos in Boston. All rights reserved.</p>
+                    <button><a href="/pages/contact.html" class="hoover-link"> Contact Us</a></button>
+               </footer> 
 
         </body> 
 
