--- a/pages/destination-guides.html
+++ b/pages/destination-guides.html
@@ -19,6 +19,7 @@
 <script>
     $(function () {
         $("#navbar").load("../components/navbar.html");
+        $("#footer").load("../components/footer.html");
     });
 </script>
 
@@ -364,4 +365,6 @@
         </div>
     </div>
 </body>
+<!-- Footer -->
+<div id="footer"></div>
 </html>
