--- a/pages/travel-resources.html
+++ b/pages/travel-resources.html
@@ -64,6 +64,7 @@
                      
                 </header>
 
+                <img id = "image2" src ="../assets/img/train_img.jpg">
                 <h2 class = "subheading"> 1. Public Transit (MBTA) </h2>  
 
                 <h2 class = "text" id = "bold">
@@ -79,6 +80,7 @@
                      Buses: Several bus routes also link these cities to Boston, with the #47 and #67 being popular choices for commuters.
                 </h2>
 
+                <img id = "image2" src ="../assets/img/Biking_img.jpg">
                 <h2 class = "subheading"> 2. Biking </h2>
 
                 <h2 class = "text" id = "bold">
@@ -95,6 +97,7 @@
                      Bike Share Programs: Consider using Bluebikes, the regional bike-sharing program, with convenient stations throughout Boston, Somerville, and Cambridge.
                 </h2>  
 
+                <img id = "image2" src ="../assets/img/car_img.png">
                 <h2 class = "subheading"> 3. Ridesharing </h2>
                       
                 <h2 class = "text" id = "bold">
@@ -105,6 +108,7 @@
                      Convenience: This option is particularly great if you're traveling with luggage or in a group. Just request a ride and enjoy the journey without worrying about parking!
                 </h2>  
 
+                <img id = "image2" src ="../assets/img/walking_img.jpg">
                 <h2 class = "subheading"> 4. Walking </h2>
 
                 <h2 class = "text" id ="bold">
